# tiny-initramfs

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  devices.c  fstab.c  io.c  log.c  mount.c  nfs.c  nfs4.h  tiny_initramfs.c  tiny_initramfs.h  tiny_initrd.c  tiny_initrd.h  util.c
